# prediction-oracle

./: .env.example  .gitignore  DEX_PREDICTION_MARKETS_API_GUIDE.md  ENHANCEMENTS_SUMMARY.txt  MARKET_INTEGRATION_GUIDE.md  OPUS45_ENHANCEMENTS.md  QUICKSTART.md  README.md  STATUS.md  add_new_categories.py  add_sports_bets.py  check_dates.py  check_dex_apis.py  check_results.py  cli.py  config.py  config.yaml  dashboard.py  data_collector.py  debug_real.py  extra_data_sources.py  finetuning_data.jsonl  import_old_data.py  integration_plan.md  llm_batch.py  ml_predictor.py  monitor.pid  multi_scanner.py  next12h.py  paper_trader.py  paper_trader_v2.py  paper_trades.json  place_category_bets.py  pyproject.toml  quick_check.py  quick_resolve.py  real_markets_only.py  reanalyze_with_category_prompts.py  resolution_checker.py  resolution_log.txt  (+11 more)
docs/: WHALE_SCANNER_SETUP.md  high_win_rate_improvements.md
execution/: __init__.py  trader.py
llm/: PIX_PROMPT.md  __init__.py  category_prompts.py  oracle.py  prompts.py  providers.py
markets/: __init__.py  base_client.py  kalshi_client.py  polymarket_client.py  router.py
ml/: ev_model.py
models/: __init__.py  market_screen.py
monitoring/: README.md
monitoring/alerts/: alert_rules.yaml
monitoring/dashboards/: grafana_prediction_oracle.json  superset_prediction_oracle.yaml
notifications/: __init__.py  telegram_bot.py
old_versions/: advanced_trader.py  batch_analyze.py  daemon.py  oracle_pro.py  oracle_v2.py  oracle_v3.py  oracle_v4.py  oracle_v5.py  paper_trade.py  realtime_trader.py
polymarket_crypto_edge_research/: README.md  config.example.env  pyproject.toml  requirements.txt
polymarket_crypto_edge_research/core/: __init__.py  config.py  logging_utils.py  time_utils.py
polymarket_crypto_edge_research/data/: __init__.py  cex_client.py  external_apis.py  multi_venue_client.py  poly_whales_client.py  polymarket_book_client.py  polymarket_data_client.py  polymarket_gamma_client.py  rate_limiter.py  schemas.py  storage.py
polymarket_crypto_edge_research/examples/: __init__.py  sanity_check_ingestion.py
polymarket_crypto_edge_research/exec/: __init__.py  backtester.py  live_orchestrator.py  paper_trader.py
polymarket_crypto_edge_research/features/: __init__.py  feature_builder_cross_market.py  feature_builder_grok.py  feature_builder_markets.py  feature_builder_underlyings.py
polymarket_crypto_edge_research/llm/: __init__.py  grok_client.py  regime_classifier.py  semantic_market_cluster.py
polymarket_crypto_edge_research/ml/: __init__.py  calibration.py  datasets.py  model_registry.py  models_sequence.py  models_tabular.py  trainer.py
polymarket_crypto_edge_research/reports/: __init__.py  metrics.py  plots.py
polymarket_crypto_edge_research/scripts/: __init__.py  daily_retrain.py  run_live_paper.py
polymarket_crypto_edge_research/strategy/: __init__.py  policy_15m_direction.py  policy_cross_market_arb.py  policy_last_seconds_scalper.py  risk_manager.py
prediction_oracle/: __init__.py  cli.py  config.py  logging_config.py  nohup_trader.out
prediction_oracle/backtest/: __init__.py  replay.py  utils.py
prediction_oracle/execution/: __init__.py  rl_policy.py  router.py
prediction_oracle/llm/: README.md  __init__.py  analytics.py  batcher.py  cost_optimizer.py  crypto_15m_trader.py  crypto_data.py  edge_finder.py  (+48 more)
risk/: __init__.py  bankroll.py  calibration.py  limits.py
runner/: scheduler.py
storage/: __init__.py
strategies/: __init__.py  base_strategy.py  longshot.py
tests/: test_basic.py  test_longshot_metrics.py  test_whale_intelligence.py
(+45 files in other folders)
