[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prediction-oracle"
version = "0.2.0"
description = "Unified Kalshi + Polymarket LLM-driven prediction market trading framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "duckdb>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "numpy>=1.26.0",
    "py-clob-client>=0.20.0",
    "cachetools>=5.3.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
oracle = "prediction_oracle.cli:app"

[tool.setuptools]
packages = ["prediction_oracle", "prediction_oracle.backtest", "prediction_oracle.execution", "prediction_oracle.llm", "prediction_oracle.markets", "prediction_oracle.metrics", "prediction_oracle.risk", "prediction_oracle.runner", "prediction_oracle.signals", "prediction_oracle.storage", "prediction_oracle.strategies"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
